--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,7 +28,6 @@
     {% block javascripts %}
         <script src="{{ asset('vendors/jquery/dist/jquery.min.js') }}" type="text/javascript"></script>
         <script src="{{ asset('vendors/bootstrap/dist/js/bootstrap.min.js') }}" type="text/javascript"></script>
-        <!--<script src="js/bootstrap-select.min.js" type="text/javascript"></script>-->
 
         <!--Educomp Custom Script-->
         <script src="{{ asset('educomp/js/eduCompMain.js') }}" type=text/javascript></script>
@@ -62,16 +61,16 @@
 
             </div>
 
-            <li class="collapse navbar-collapse" id="main-navigation">         <!-- Main Menu -->
+            <div class="collapse navbar-collapse" id="main-navigation">         <!-- Main Menu -->
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="{{ path('homepage') }}">Accueil</a></li>
-                    <li><a href="afadec.html">L’AFADEC</a></li>
+                    <li><a href="{{ path('afadec') }}">L’AFADEC</a></li>
                     <li><a href="#">Informations pratiques</a>
                         <ul class="sub-menu">									<!-- Sub Menu -->
-                            <li><a href="concours.html">Concours</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
-                            <li><a href="metier-enseignant.html">Le métier d'enseignant</a></li>
-                            <li><a href="admission-process.html">Comment s'inscrire ?</a></li>
+                            <li><a href="{{ path('concours') }}">Concours</a></li>
+                            <li><a href="{{ path('faq') }}">FAQ</a></li>
+                            <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
+                            <li><a href="{{ path('sinscrire') }}">Comment s'inscrire ?</a></li>
                         </ul>
                     </li>
                     <li><a href="{{ path('myCourses') }}">Les cours</a></li>
@@ -90,7 +89,6 @@
                 </ul>
             </div>
         </div>
-        </div>
     </nav>
 </header>
 
@@ -105,59 +103,26 @@
     <div class="footer-pri">            <!-- Primary Footer -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-4 footer-widget">            <!-- Footer Widget - Blog -->
-                    <h5 class="heading inverse">Recent <span class="color2">Blog</span></h5>
-                    <ul class="blog-thumbnail">
-                        <li class="entry">          <!-- Blog Entry Excerpt -->
-                            <div class="entry-content">
-                                <h4 class="entry-header"><a href="blog-single.html">What it takes to be National Best ?</a></h4>
-                                <p class="entry-text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.                                     </p>
-                            </div>
-                        </li>
-                        <li class="entry">          <!-- Blog Entry Excerpt -->
-                            <div class="entry-content">
-                                <h4 class="entry-header"><a href="blog-single.html">How do we achieve 100% success rate ?</a></h4>
-                                <p class="entry-text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.                                     </p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-sm-2 footer-widget">            <!-- Footer Widget - Quick Links -->
-                    <h5 class="heading inverse">Quick <span class="color2">Links</span></h5>
+                <div class="col-sm-4 footer-widget">
+                    <h5 class="heading inverse">Informations <span class="color2">pratiques</span></h5>
                     <ul class="quick-links">
-                        <li><a href="brief-history.html">Historique</a></li>
-                        <li><a href="about-educomp.html">À propos d'EDUComp</a></li>
-                        <li><a href="course-grid.html">Nos cours</a></li>
-                        <li><a href="teachers.html">Nos enseignants</a></li>
-                        <li><a href="upcoming-events.html">Évènements à venir</a></li>
-                        <li><a href="contact.html">Contactez nous</a></li>
+                        <li><a href="{{ path('concours') }}">Concours</a></li>
+                        <li><a href="{{ path('faq') }}">FAQ</a></li>
+                        <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
+                        <li><a href="{{ path('sinscrire') }}">Comment s'inscrire ?</a></li>
+                        <li><a href="{{ path('afadec') }}">L’AFADEC</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-2 footer-widget">            <!-- Footer Widget - Affiliations -->
-                    <h5 class="heading inverse">Affiliations &amp; <span class="color2">Awards</span></h5>
+                <div class="col-sm-4 footer-widget">
+                    <h5 class="heading inverse">Logos <span class="color2">partenaires</span></h5>
                     <ul class="affiliations">
                         <li><img src="{{ asset('educomp/images/logo.png') }}" class="img-responsive" alt=""></li>
                     </ul>
                 </div>
-                <div class="col-sm-2 footer-widget">            <!-- Footer Widget - Policies -->
-                    <h5 class="heading inverse">Our <span class="color2">Elements</span></h5>
-                    <ul class="quick-links">
-                        <li><a href="icon-boxes.html">Icon Boxes</a></li>
-                        <li><a href="accordion.html">Accordion</a></li>
-                        <li><a href="tables.html">Tables</a></li>
-                        <li><a href="tabs.html">Tabs</a></li>
-                        <li><a href="modals.html">Modals</a></li>
-                        <li><a href="progress-bars.html">Progress Bars</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-2 footer-widget">            <!-- Footer Widget - Contact Info -->
-                    <h5 class="heading inverse">Contactez  <span class="color2">Nous</span></h5>
-                    <address>
-                        <strong>EDUcomp Group Of Institutions</strong>
-                        <span>45th Floor,<br/> Newzek Estate Building,<br/> United Kingdom</span>
-                    </address>
-                    <a href="tel:+4525644563" class="phone"><i class="fa fa-phone fa-fw"></i> +452 564 4563</a>
-                    <a href="mailto:test@example.com" class="email"><i class="fa fa-envelope fa-fw"></i> info@company.com</a>
+                <div class="col-sm-4 footer-widget">            <!-- Footer Widget - Contact Info -->
+                    <h5 class="heading inverse">Nous <span class="color2">contacter</span></h5>
+                    <a href="" class="email"><i class="fa fa-facebook fa-fw"></i> notre Facebook</a>
+                    <a href="mailto:contact.afadec@gmail.com" class="email"><i class="fa fa-envelope fa-fw"></i> contact.afadec@gmail.com</a>
                 </div>
             </div>
         </div>
@@ -166,15 +131,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6 text-center">
-                    <span class="copyright">&copy; Copyright Your Company 2016</span>           <!-- Copyright Text -->
+                    <span class="copyright">&copy; AFADEC 2016</span>           <!-- Copyright Text -->
                 </div>
                 <div class="col-sm-6 text-center">
                     <ul class="social">          <!-- Social Media Links -->
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-reddit-alien"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -183,6 +144,5 @@
 </footer>
 
 <div id="back"><i class="fa fa-angle-up"></i></div>     <!-- Back To Top -->
-
 </body>
 </html>
