--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -6,23 +6,28 @@ body{
     font-family: 'Libre Baskerville', serif;
 }
 
+/* footer */
+.quick-links > li > a{
+    color: #d3d3d3
+}
+.footer-pri{
+    border-top: 5px solid #121826;
+    background-color: #9e9b9b;
+    padding: 0;
+}
+
+.footer-sec{
+    background-color: #121826;
+    padding: 10px 0px 0px;
+}
+
+/* nav */
 .navbar-fixed-top {
     position: fixed;
     right: 0;
     left: 0;
     z-index: 1030;
 }
-.footer-pri{
-    border-top: 5px solid #121826;
-    background-color: #9e9b9b;
-    padding: 30px 0 15px;
-}
-
-.footer-sec{
-    background-color: #121826;
-    padding: 30px 0px 20px;
-}
-
 .nav-stacked {
     padding: 0px;
     margin-right: 10px;
@@ -41,6 +46,10 @@ body{
 .pt-10{padding-top:10px;}
 .pb-10{padding-bottom:10px;}
 
+.mt-140 {
+    margin-top: 140px;
+}
+
 a { font-family: inherit; color: inherit; }
 
 
@@ -55,12 +64,10 @@ a { font-family: inherit; color: inherit; }
 .badge-inverse {background-color: #333333;}
 .badge-inverse:hover {background-color: #1a1a1a;}
 
-/* Admin du cours*/
+/* zonesRessource */
 .courseElems *{
-    margin: 0;
-    padding: 0 !important;
-    position: relative !important;
-    display: block !important;
+    padding: 0;
+    display: block;
 }
 .courseElemAdmin{
     margin-bottom: 20px;
@@ -87,20 +94,32 @@ a { font-family: inherit; color: inherit; }
 .freeAdmin .titleBar{
     background: #0048a2;
 }
-.btnActionCol li{
+.btnActionCol li, .btnAdmin{
     margin-bottom: 5px;
     background: #ff9c00;
     cursor: pointer;
-    border-bottom-left-radius: 3px;
-    border-top-left-radius: 3px;
-    padding: 5px;
     text-align: center;
     color: #fff;
 }
-.btnDeleteElem{
-    background: #c60100;
+.btnDelete{
+    background: #c60100 !important;
 }
-.btnActionCol i{
+.btnRight{
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+.btnLeft{
+    border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+.btnAlone{
+    border-radius: 3px;
+}
+.btnActionCol i, .btnAdmin i{
     line-height: 32px;
     font-size: 20px;
 }
@@ -110,35 +129,150 @@ a { font-family: inherit; color: inherit; }
     min-height: 150px !important;
     padding: 3px 6px !important;
 }
+.formCol>.row{
+    margin-left: 0;
+    margin-right: 0;
+}
 .LabelAdmin{
     font-weight: bold;
 }
 .champAdmin{
-    padding: 1px 2px !important;
+    padding: 1px 5px !important;
+    border: 1px solid #aaa;
+}
+textarea{
+    resize: none;
 }
 
 .ui-state-highlight {
-    height: 200px;
-    line-height: 120px;
+    min-height: 30px;
     background: #b3d271;
     border: #a8c769 2px solid;
+    margin-bottom: 20px;
+    width:90%;
 }
 
-.freeAdmin [data-champName="description"]{
-    resize: none;
+.textarea{
+    background: #E8E8E8;
 }
+
+.formCol{
+    display: flex;
+    flex-direction: column;
+}
+.formCol .row{
+    flex: 1;
+}
+
+.sectionDrop{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    text-align: center;
+    font-family: "Oswald",sans-serif;
+    height: 100%;
+}
+.zoneDrop{
+    flex:1;
+    background: #fff;
+    border: 4px dashed #888;
+    border-radius: 15px;
+    height: 100%;
+}
+
+/* popup ajout ressources */
+.tableAddItem{
+    width:100%;
+}
+.tableAddItem tr.item>td{
+    padding: 10px;
+}
+.tableAddItem tr.item>td:last-child{
+    width: 70px;
+}
+.tableAddItem tr.item:nth-child(even) {
+    background-color: #f2f2f2
+}
+
+.tableDetailItem td{
+    padding: 5px;
+
+}
+.nomChamp{
+    font-family: "Oswald",sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+
+/* Admin du cours*/
+/* sections */
+.ongletAdmin:not(.active) > a{
+    color: #f89406 !important;
+}
+.ongletAdmin.active > a{
+    background-color: #f89406 !important;
+}
+.ongletAdmin.active > a::after{
+    border-color: transparent transparent transparent #f89406 !important;
+}
+.adminSectionRow input[data-champName="nom"]{
+    height: 32px;
+}
+.btnAdmin.btnSaveInputChange{
+    background: #00A0D1;
+}
+.inEdition{
+    border: 4px solid #00A0D1;
+}
+.btnAddSection{
+    background: #aaa;
+    cursor: default;
+}
+.btnAddSection.actif{
+    background: #92d26a;
+    cursor: pointer;
+}
+.nomSectionAddInput.inEdition{
+    border: 4px solid #92d26a;
+}
+.btnMove{
+    background: #9179ef;
+}
+
 
 /* cours */
 .courseElem{
     list-style: none;
+}
+.itemInfos{
+    display: inline-block;
+    vertical-align: top;
+}
+.itemNom{
+    font-family: "Oswald",sans-serif;
+    font-size: 120%;
+}
+.itemDescription{
+    font-size: 14px;
+    font-style: italic;
+    color: #AAAAAA;
+}
+.alignR{
+    margin-left: 50px;
 }
 .ressourceLink{
     margin-bottom: 5px;
     background: #ff9c00;
     cursor: pointer;
     border-radius: 3px;
-    padding: 2px;
+    padding-bottom: 2px;
+    line-height: 22px;
     text-align: center;
     color: #fff;
     font-size: 20px;
+    width:35px;
+    display: inline-block;
+    vertical-align: top;
 }
