--- a/app/Resources/views/cours/adminBtns.html.twig
+++ b/app/Resources/views/cours/adminBtns.html.twig
@@ -1,14 +1,14 @@
 <div class="btnActionCol col-md-1">
     <ul>
-        <li class="btnLeft">
+        <li class="myBtn btnLeft">
             {% if val.zones.containers[keyR].isVisible %}
                 <i class="activationBtn fa fa-check-square-o"></i>
             {% else %}
                 <i class="activationBtn fa fa-square-o"></i>
             {% endif %}
         </li>
-        <li class="btnEdit btnLeft" data-toggle="modal" data-target="#modal1"><i class="fa fa-pencil"></i></li>
-        <li class="btnMoveElem btnLeft"><i class="fa fa-arrows-alt "></i></li>
-        <li class="btnDelete btnLeft btnDeleteElem"><i class="fa fa-trash"></i></li>
+        <li class="myBtn btnMoveUp btnLeft"><i class="fa fa-arrow-up"></i></li>
+        <li class="myBtn btnMoveDown btnLeft"><i class="fa fa-arrow-down"></i></li>
+        <li class="myBtn btnDelete btnLeft btnDeleteElem"><i class="fa fa-trash"></i></li>
     </ul>
 </div>
