--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -91,18 +91,26 @@ a { font-family: inherit; color: inherit; }
 .devoirAdmin .titleBar{
     background: #ff3f46;
 }
-.freeAdmin .titleBar{
+.groupeLiensAdmin .titleBar{
     background: #0048a2;
 }
-.btnActionCol li, .btnAdmin{
-    margin-bottom: 5px;
-    background: #ff9c00;
+.freeAdmin .titleBar{
+    background: #a29820;
+}
+.myBtn{
     cursor: pointer;
     text-align: center;
     color: #fff;
 }
+.btnActionCol li, .btnAdmin{
+    margin-bottom: 5px;
+    background: #ff9c00;
+}
 .btnDelete{
     background: #c60100 !important;
+}
+.btnEdit{
+    background: #006ca2 !important;
 }
 .btnRight{
     border-bottom-left-radius: 0px;
@@ -123,6 +131,12 @@ a { font-family: inherit; color: inherit; }
     line-height: 32px;
     font-size: 20px;
 }
+.inlineBtn{
+    display: inline-block;
+    padding: 5px;
+    border-radius: 10px;
+}
+
 .formCol{
     border: 2px solid #d1d1d1;
     background: #e9e9e9;
@@ -178,6 +192,10 @@ textarea{
     border: 4px dashed #888;
     border-radius: 15px;
     height: 100%;
+}
+
+.courseElems .courseElemAdmin:first-child .btnMoveUp, .courseElems .courseElemAdmin:last-child .btnMoveDown{
+    display: none;
 }
 
 /* popup ajout ressources */
@@ -275,4 +293,18 @@ textarea{
     width:35px;
     display: inline-block;
     vertical-align: top;
+}
+
+/* CRUD DES ITEMS */
+.listeLiensGroupe{
+    background: #fff;
+    border:#aaa 1px solid;
+}
+.listeLiensGroupe.notEditable{
+    background: none;
+}
+.listeLiensGroupe .row{
+    padding: 5px;
+    border-bottom: dashed #bbb 1px;
+    margin: 0;
 }
