--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,8 @@
 
     <title>{% block title %}AFADEC{% endblock %}</title>
     {% block mystylesheets %}
-        <link rel="stylesheet" href="{{ asset('vendors/bootstrap/dist/css/bootstrap.css') }}" />
+        <link rel="stylesheet" href="{{ asset('vendors/bootstrap/dist/css/bootstrap.min.css') }}" />
+        <link rel="stylesheet" href="{{ asset('vendors/bootstrap-select/dist/css/bootstrap-select.min.css') }}" />
         <link rel="stylesheet" href="{{ asset('vendors/components-font-awesome/css/font-awesome.min.css') }}" />
 
         <!--EDUComp Stylesheet -->
@@ -28,6 +29,7 @@
     {% block javascripts %}
         <script src="{{ asset('vendors/jquery/dist/jquery.min.js') }}" type="text/javascript"></script>
         <script src="{{ asset('vendors/bootstrap/dist/js/bootstrap.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('vendors/bootstrap-select/dist/js/bootstrap-select.min.js') }}" type="text/javascript"></script>
 
         <!--Educomp Custom Script-->
         <script src="{{ asset('educomp/js/eduCompMain.js') }}" type=text/javascript></script>
